Resolve spacing in triblive section

--- a/source/css/_sections.sass
+++ b/source/css/_sections.sass
@@ -170,6 +170,8 @@
 
 .triblive-two
   .text-container
+    @include media($tablet)
+      padding-top: 1.5em
     padding-top: 3em
 
 .festival-video
